--- a/Practice.html
+++ b/Practice.html
@@ -18,7 +18,7 @@
 	
 	<p> 
 	
-			<img src="images/Chipotle.jpg" width="1000" height="640"
+			<img src="rachees330.github.io/images/Chipotle.jpg" width="1000" height="640"
 	</p>
 	
 	
