--- a/bestmovie.html
+++ b/bestmovie.html
@@ -5,8 +5,8 @@
 <p>
 	<title>Stuck in Love</title>
 	<h1>Stuck in Love</h1>
-	<img src="rachees330.github.io/images/movie.jpg" width="640" height="622"
-	<a href="https://en.wikipedia.org/wiki/Stuck_in_Love">click to read more about the movie</a>
+	<img src="https://67.media.tumblr.com/af55795a59d4e0b632d5cf24e39070e7/tumblr_obp31jUqtn1uqir96o1_500.gif" width="640" height="622"
+<p>	<a href="https://en.wikipedia.org/wiki/Stuck_in_Love">click to read more about the movie</a> </p>
 </p>
 </head>
 <body>
