--- a/bestmovie.html
+++ b/bestmovie.html
@@ -5,15 +5,15 @@
 <p>
 	<title>Stuck in Love</title>
 	<h1>Stuck in Love</h1>
-	<img src="https://67.media.tumblr.com/af55795a59d4e0b632d5cf24e39070e7/tumblr_obp31jUqtn1uqir96o1_500.gif" width="640" height="622"
-<p>	<a href="https://en.wikipedia.org/wiki/Stuck_in_Love">click to read more about the movie</a> </p>
+<p><img src="https://s-media-cache-ak0.pinimg.com/236x/25/f1/6c/25f16ca6143d8585edde7a8685032394.jpg" width="640" height="622"</p>
+<p><a href="https://en.wikipedia.org/wiki/Stuck_in_Love">click to read more about the movie</a></p>
 </p>
 </head>
 <body>
-<head>Why I like the movie</head>
-	<p><h2>Stuck in Love is my favorite movie because the director did an amazing job weaving three story lines together. Also, this movie is one of the few that makes everyone laugh and cry multiple times throughout the hour and 37 minutes. </h2></p>
-<head>Facorite Actor</head>
-	<p><h3>In this movie, my favorite actress would have to be Lily Collins because she is very convincing in her role as a college student, and portrays the part perfectly.</h3></p>
+<h1>Why I like the movie</h1>
+	<p>Stuck in Love is my favorite movie because the director did an amazing job weaving three story lines together. Also, this movie is one of the few that makes everyone laugh and cry multiple times throughout the hour and 37 minutes.</p>
+<h2>Facorite Actor</h2>
+	<p>In this movie, my favorite actress would have to be Lily Collins because she is very convincing in her role as a college student, and portrays the part perfectly.</p>
 
 </body>
 </html>
