--- a/bestmovie.html
+++ b/bestmovie.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 <p>
+<body style="#f2d9f2">
 	<title>Stuck in Love</title>
 	<h1>Stuck in Love</h1>
 <p><img src="http://media-cache-ec0.pinimg.com/736x/b9/54/f8/b954f8e77689d3629dfd7cb359f224ba.jpg" width="640" height="622"</p>
