--- a/bestmovie.html
+++ b/bestmovie.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="utf-8">
 <p>
-<body style="#f2d9f2">
+
 	<title>Stuck in Love</title>
+<body style="background-color:aquamarine">
 	<h1>Stuck in Love</h1>
 <p><img src="http://media-cache-ec0.pinimg.com/736x/b9/54/f8/b954f8e77689d3629dfd7cb359f224ba.jpg" width="640" height="622"</p>
 <p><a href="https://en.wikipedia.org/wiki/Stuck_in_Love">click to read more about the movie</a></p>
