--- a/jeroo.html
+++ b/jeroo.html
@@ -138,21 +138,39 @@
 
 	</header><!-- end header -->
 	
-	<!-- Section Content - Project and Assignments -->
+	<!-- Section Content - Unit 1 -->
 	<section id="content">
-		<h2>Jeroo</h2>
-		<p>Put Jeroo Content Here</p>
+		<h2>Jeroo Unit 1</h2>
+		<p>During the time that we worked on Jeroo Unit 1 labs, we learned the basic steps and tools in Jeroo. Direction, Motion, and Counting were the main learning curves during this lab.</p>
+		<p> <img src="images/photo(unit1).png"/ width="400" height="300"> </p>
+	</section><!-- end Conent -->
+	
+	<!-- Section Content - Unit 2 -->
+	<section id="content">
+		<h2>Jeroo Unit 2</h2>
+		<p>During the time that we worked on Jeroo Unit 2 labs, we learned learning a little more in depth about Jeroo. Learing to create and use methods properly were the main points of these labs.</p>
+		<p> <img src="images/photo(unit2).png"/ width="400" height="300"> </p>
+	</section><!-- end Conent -->
+	
+	<!-- Section Content - Unit 3 -->
+	<section id="content">
+		<h2>Jeroo Unit 3</h2>
+		<p>During the time that we worked on Jeroo Unit 3 labs, we learned about using loops to create shorter and more concise codes. This helps when a piece of code is used multiple times during a project.</p>
+		<p> <img src="images/photo(unit3).png"/ width="400" height="300"> </p>
+	</section><!-- end Conent -->
+	
+	<!-- Section Content - Unit 4 -->
+	<section id="content">
+		<h2>Jeroo Unit 4</h2>
+		<p>During the time that we worked on Jeroo Unit 4 labs, we learned an even better way of orginizing and creating simple codes. If Statements and Conditions help us to do that.</p>
+		<p> <img src="images/photo(unit4).png"/ width="400" height="300"> </p>
 	</section><!-- end Conent -->
 	
 	<!-- Aside Content - Hobbies & Interests -->
 	<aside id="hobbies">
-		<p>Put Jeroo Content Here</p>
+		<p> <img src="images/photo(5).png"/ width="400" height="300"> </p>
 	</aside><!-- end Hobbies -->
 	
-	<!-- Footer Content -->
-	<footer id="pageFooter">
-		<p>author, contact, copy rights</p>
-	</footer><!-- end Footer -->
 
 </div><!-- end Wrapper -->
 
