--- a/python.html
+++ b/python.html
@@ -141,7 +141,22 @@
 	<!-- Section Content - Project and Assignments -->
 	<section id="content">
 		<h2>Python</h2>
-		<p>Put Python Content Here</p>
+		
+		<h3>Unit 1</h3>
+		<p> During Python unit 1, we learned the basic concepts of python. This included learning how to imput variables, create class files, and run the programs without errors.</p>
+		<p><img src="images/photo(unit1).png"/ width="400" height="300"></p>
+		
+		<h3>Unit 2</h3>
+		<p> During Python unit 2, we learned the how to code and incorpirate multiple class files through python. Including learning how to imput variables, compute class files, and run the programs without errors, during unit 2 we learned how to interact the class files by colliding and such.</p>
+		<p><img src="images/photo(unit2).png"/ width="400" height="300"></p>
+		
+		<h3>Unit 3</h3>
+		<p> During Python unit 3, we learned how to create a game using python. These games that are capable of being played through pygame use the same coding skills as we learned so far.</p>
+		<p><img src="images/photo(unit3).png"/ width="400" height="300"></p>
+		
+		<h3>Unit 4</h3>
+		<p> During Python unit 4, we learned the basic concepts of python. This included learning how to imput variables, create class files, and run the programs without errors.</p>
+		<p><img src="images/photo(unit4).png"/ width="400" height="300"></p>
 	</section><!-- end Conent -->
 	
 	<!-- Aside Content - Hobbies & Interests -->
